# notion-cli

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  REMAINING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/notion_cli/: _async.py  _batch.py  _block_utils.py  auth.py  cli.py  credentials.py  markdown.py  options.py  output.py  parsing.py
src/notion_cli/commands/: api.py  auth.py  block.py  comment.py  db.py  page.py  schema.py  search.py  team.py  user.py
tests/: conftest.py  test_api.py  test_async_bridge.py  test_auth.py  test_auth_commands.py  test_batch.py  test_block.py  test_block_utils.py  test_comment.py  test_credentials.py  test_db.py  test_error_handling.py  test_grep.py  test_markdown.py  test_output.py  test_page.py  test_page_edit.py  test_parsing.py  test_round2_fixes.py  test_schema.py  test_search.py  test_streaming.py  test_team.py  test_tier1_fixes.py  test_tier3_fixes.py  test_timeout.py  test_user.py  test_where.py
