[project]
name = "notionctl"
version = "0.3.0"
description = "Notion CLI built for coding agents. Compact JSON, structured errors, meaningful exit codes."
readme = "README.md"
authors = [
    { name = "jjovalle99" }
]
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "typer>=0.15",
    "notion-client>=3.0",
]

[project.scripts]
notion = "notion_cli.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15",
    "pre-commit>=4",
    "pytest-cov>=7.0.0",
    "ty>=0.0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ANN"]

# notion-client SDK lacks proper type stubs: AsyncClient.__aexit__ returns
# wrong type, all methods return SyncAsync[Any] (= Any | Awaitable[Any])
# which ty can't narrow, and subscript/attribute access on the union fails.
[tool.ty.rules]
invalid-context-manager = "ignore"
invalid-argument-type = "ignore"
not-subscriptable = "ignore"
unresolved-attribute = "ignore"

[tool.uv.build-backend]
module-name = "notion_cli"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
